--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -1,11 +1,23 @@
 /* You can add global styles to this file, and also import other style files */
 
 html, body {
-  height: 100%;
+  height: calc(100% - 10px);
   background-color: dimgray
 }
 
 body {
   margin: 0;
   font-family: Roboto, "Helvetica Neue", sans-serif;
+}
+
+::-webkit-scrollbar {
+  width: 4px;
+  overflow-y: scroll;
+  background: dimgray;
+  box-shadow: inset 0 0 4px #707070;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #69f0ae;
+  border-radius: 10px;
 }
